# cppbackend

./: requirements.txt
sprint1/problems/radio/precode/: CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt
sprint2/problems/join_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint2/problems/join_game/solution/help/: help.txt
sprint2/problems/join_game/solution/src/: api_handler.cpp  api_handler.h  game_model.cpp  game_model.h  http_server.h  join_handler.h  json_builder.cpp  json_builder.h  json_loader.cpp  json_loader.h  logger.h  logging_request_handler.h  main.cpp  model.h  player.h  player_tokens.cpp  player_tokens.h  request_handler.cpp  request_handler.h  tagged.h
sprint2/problems/join_game/solution/src (Копия)/: main.cpp
sprint2/problems/join_game/solution/src (Копия)/logger/: logging_handler.h
sprint2/problems/join_game/solution/src (Копия)/model/: dog.cpp
sprint2/problems/join_game/solution/src (Копия)/request_handler/: static_file_request_handler_proxy.h
sprint2/problems/join_game/solution/src (Копия)/server/: http_server.cpp
sprint2/problems/join_game/solution/src/api/: api_handler.h  json_serialization.cpp
sprint2/problems/join_game/solution/src/app/: app.cpp  app.h  application.cpp  application.h  player.h  player_tokens.h
sprint2/problems/join_game/solution/src/http_handler/: api_handler.cpp  api_handler.h  request_handler.cpp  request_handler.h
sprint2/problems/join_game/solution/src/infra/: http_server.h  json_loader.cpp
sprint2/problems/join_game/solution/src/json/: json_handler.cpp  json_handler.h  json_loader.cpp  json_loader.h
sprint2/problems/join_game/solution/src/logger/: logger.cpp  logger.h  logging_handler.cpp  logging_handler.h
sprint2/problems/join_game/solution/src/model/: dog.cpp  dog.h  game.cpp  game.h  game_session.cpp  game_session.h  map.cpp  map.h  model.cpp  model.h  player.cpp  player.h  player_tokens.cpp  player_tokens.h
sprint2/problems/join_game/solution/src/other/: data.h  file_system.cpp  file_system.h  tagged.h  util.cpp  util.h
sprint2/problems/join_game/solution/src/request_handler/: api_request_handler.h  api_request_handler_proxy.h  request_handler.cpp  request_handler.h  request_handler_unit.h  static_file_request_handler.h  static_file_request_handler_proxy.h
sprint2/problems/join_game/solution/src/server/: http_server.cpp  http_server.h
sprint2/problems/static_content/solution/: CMakeLists.txt
sprint2/problems/static_content/solution/help/: help.txt
sprint2/problems/static_content/solution/src/: json_loader.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/static_content/solution/src/api/: api_handler.h  json_serialization.cpp  json_serialization.h
sprint2/problems/static_content/solution/src/app/: app.cpp  app.h
sprint2/problems/static_content/solution/src/logger/: logger.cpp
sprint2/problems/static_content/solution/src/model/: game.cpp  game.h  game_session.cpp  game_session.h  map.cpp
sprint3/problems/gather-tests/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gather-tests/solution/tests/: CMakeLists.txt  collision-detector-tests.cpp  wrong-implementation-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/src/: main.cpp
sprint3/problems/gen_objects/solution/src/api/: api_handler.cpp  json_serialization.cpp  json_serialization.h
sprint3/problems/gen_objects/solution/src/app/: app.h  player.h  player_tokens.h
sprint3/problems/gen_objects/solution/src/infra/: http_server.h  json_loader.cpp
sprint3/problems/gen_objects/solution/src/model/: dog.h  game.cpp  game_session.cpp  game_session.h
sprint3/problems/htmldecode/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/htmldecode/solution/src/: htmldecode.cpp
sprint3/problems/htmldecode/solution/tests/: main.cpp  tests.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt  Dockerfile  README.md
sprint3/problems/static_lib/solution/src/api/: json_serialization.h
sprint3/problems/static_lib/solution/src/app/: app.cpp
sprint3/problems/static_lib/solution/src/infra/: json_loader.cpp
sprint3/problems/static_lib/solution/src/model/: game.cpp  game.h  map.h
sprint3/problems/urldecode/solution/: CMakeLists.txt
sprint3/problems/urldecode/solution/src/: urldecode.cpp
sprint3/problems/urldecode/solution/tests/: tests.cpp
sprint3/problems/urlencode/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/urlencode/solution/src/: urlencode.cpp
sprint3/problems/urlencode/solution/tests/: tests.cpp
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt  conanfile.txt  Ошибка в тесте grep A.txt
sprint4/problems/bookypedia-2/solution/src/: bookypedia.cpp  bookypedia.h
sprint4/problems/bookypedia-2/solution/src/app/: unit_of_work.h  use_cases.h  use_cases_impl.cpp  use_cases_impl.h
sprint4/problems/bookypedia-2/solution/src/domain/: author.h  book.h  fwd.h  tag.h
sprint4/problems/bookypedia-2/solution/src/menu/: menu.cpp  menu.h
sprint4/problems/bookypedia-2/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/bookypedia-2/solution/src/ui/: struct_info.h  view.cpp  view.h
sprint4/problems/bookypedia-2/solution/src/util/: tagged.h  tagged_uuid.h
sprint4/problems/bookypedia-2/solution/tests/: bookypedia_tests.cpp  integration_tests.cpp  tagged_uuid_tests.cpp  use_case_tests.cpp
sprint4/problems/db_of_books/solution/: CMakeLists.txt  app.cpp  app.hpp  book_repository.cpp  book_repository.hpp  commands.cpp  commands.hpp  conanfile.txt  json_parser.cpp  json_parser.hpp  json_utils.hpp  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/leave_game/solution/src/: main.cpp  request_handler.h
sprint4/problems/leave_game/solution/tests/: collision_detector_tests.cpp  dog-tests.cpp  model-tests.cpp  state_serialization_tests.cpp
sprint4/problems/leave_game/solution1/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/leave_game/solution1/tests/: state_serialization_tests.cpp
(+266 files in other folders)
